--- a/index.html
+++ b/index.html
@@ -699,7 +699,8 @@
             'Kajin',
             'Speedosausage',
             'BlushySpicy',
-            'Aetherionart'
+            'Aetherionart',
+            'GodoyG'
         ];
 
         function initLogos() {
