--- a/index.html
+++ b/index.html
@@ -700,7 +700,8 @@
             'Speedosausage',
             'BlushySpicy',
             'Aetherionart',
-            'GodoyG'
+            'GodoyG',
+            'Zuharu'
         ];
 
         function initLogos() {
